# unforeseen

./: Cargo.toml  README.md  install.ps1
.github/workflows/: release.yml  validate.yml
src/: lib.rs  log.rs  module.rs  patcher.rs  pe.rs  platform.rs  scanner.rs  version_proxy.rs
