[package]
name = "unforeseen"
version = "1.0.0"
edition = "2021"

[lib]
name = "unforeseen"
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
